  Reorganised serial i/o code prior to adding Falcon serial i/o support. (RFB)

2012-10-09
- bios/serport.c bios/serport.h: Reformat & tidy up code. (RFB)

2012-10-10
- bios/serport.c bios/serport.h bios/xbios.c: Fix Rsconf() to return
  ULONG instead of void. (RFB)

2012-10-11
- bios/machine.c bios/machine.h bios/screen.h: Replaced hard-coded
  values with #defines in feature detection code. (RFB)

2012-10-12
- bios/machine.c bios/machine.h include/config.h: Added detection of
  additional serial ports: Falcon SCC and TT second MFP. (RFB)

2012-10-13
- bios/bios.c bios/chardev.c bios/chardev.h bios/ikbd.c bios/ikbd.h
  bios/kprint.c bios/midi.c bios/midi.h bios/parport.c bios/parport.h
  bios/serport.c: Code cleanup: remove unnecessary argument passed
  in Bconout() processing. (RFB)
- bios/bios.c bios/chardev.c bios/chardev.h bios/parport.c
  bios/tosvars.h: Code cleanup: save ROM space & fix swapping of Bcostat()
  for ikbd & midi. (RFB)

2012-10-15
- bios/bios.c bios/chardev.c bios/chardev.h bios/iorec.h bios/serport.c
  bios/serport.h bios/xbios.c bios/xbios.h: Added Bconmap() support. (RFB)
- doc/status.txt: Small corrections to lists of implemented functions. (RFB)

2012-10-18
- bios/ide.c: Fixed and enabled support for IDE slave device. Contributed by
  Stephen Leary. (VRI)
- bios/ide.c bios/ide.h bios/machine.c include/config.h: Enabled the internal
  IDE driver by default. (VRI)

2012-10-26
- bios/bios.c bios/chardev.c bios/chardev.h bios/ikbd.c bios/ikbd.h
  bios/kprint.c bios/midi.c bios/midi.h bios/parport.c bios/parport.h
  bios/serport.c bios/serport.h bios/tosvars.h : Fix args passed to xconout
  vectors (regression introduced 2012-10-13). (RFB)

2012-10-27
- aes/gemsuper.c aes/crysbind.h: Fix overwrite of local AES arrays if
  originals are longer than expected. (RFB)
- aes/gemsuper.c: Fix warning msg introduced by previous update. (RFB)
- aes/gemfslib.c: Allow empty string in path passed to file selector. (RFB)